<resources>
    <string name="app_name">PJATK - Lista produktów</string>
    <string name="add_button">Dodaj produkt</string>
    <string name="settings">Ustawienia</string>
    <string name="back">Wróć</string>
    <string name="product_lists">Listy zakupów</string>
    <string name="comeback">Powrót</string>
    <string name="font_color">Kolor czcionki</string>
    <string name="color">Kolor</string>
    <string name="font_size">Rozmiar czcionki</string>
    <string name="accept">Akceptuj</string>
    <string name="product_name_label">Nazwa produktu:</string>
    <string name="price_label">Cena:</string>
    <string name="count">Ilość: </string>
    <string name="bought">Zakupiono</string>
    <string name="edit_product">Edytuj produkt</string>
    <string name="delete">Usuń</string>
    <string name="test_broadcast">Test broadcast</string>
    <string name="title_activity_maps">Map</string>
    <string name="shop_list_button">Lista sklepów</string>
    <string name="shop_name_label">Nazwa sklepu</string>
    <string name="address">Adres</string>
    <string name="longitude">Dług. geo.</string>
    <string name="latitude">Szer. geo.</string>
    <string name="add_shop">Dodaj sklep</string>
    <string name="map">Mapa</string>
    <string name="radius">Promień</string>
    <string name="shop_name">Nazwa sklepu</string>
    <string name="desc">Opis</string>
    <string name="edit_shop">Edytuj sklep</string>
    <string name="textwarn">Warnign</string>
    <string name="geofence_transition_entered">Wszedłeś do sklepu</string>
    <string name="geofence_transition_exited">Opuściłeś sklep</string>
    <string name="unknown_geofence_transition">Nie bardzo wiem co zrobiłes</string>
    <string name="geofence_transition_invalid_type">Nie prawidłowy typ</string>
    <string name="geofence_transition_notification_text">Wszedłeś do sklepu</string>
    <string name="appwidget_webview">WebView</string>
    <string name="add_widget">Add widget</string>
    <string name="random_image">Losuj obrazek</string>
    <string name="prev">Poprzedni</string>
    <string name="start_stop">Start/Stop</string>
    <string name="next">Następny</string>
    <string name="go_to_web">Przejdź do strony</string>
    <string name="widget_start">Start</string>
    <string name="stop">Stop</string>
    <string name="pause">Pauza</string>
</resources>
